--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social-network-links:
 #  email: "someone@example.com"
   facebook: ANtqAmE
   github: ANtqAmE
-  twitter: AliQassem_onion
+  twitter: 0xAliQassem
 #  patreon: DeanAttali
   youtube: c/ANtqAmE
 #  medium: yourname
