--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ round-avatar: true
 social-network-links:
 #  email: "someone@example.com"
   facebook: ANtqAmE
-  github: ANtqAmE
+  github: 0xaliqassem
   twitter: 0xAliQassem
 #  patreon: DeanAttali
   youtube: c/ANtqAmE
