--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social-network-links:
   github: 0xaliqassem
   twitter: 0xAliQassem
 #  patreon: DeanAttali
-  youtube: c/ANtqAmE
+  youtube: c/0xAliQassem
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
