--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Ali Qassem
 
 # Your name to show in the footer
-author: Ali Qassem / Security Researcher & Coder
+author: Ali Qassem / Security Researcher
 
 # --- List of links in the navigation bar --- #
 
@@ -40,11 +40,11 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
 #  email: "someone@example.com"
-  facebook: ANtqAmE
-  github: 0xaliqassem
-  twitter: 0xAliQassem
+  facebook: e5t3hb4r47
+  github: e5t3hb4r47
+  twitter: e5t3hb4r47
 #  patreon: DeanAttali
-  youtube: c/0xAliQassem
+  youtube: c/e5t3hb4r47
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
