--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social-network-links:
   twitter: e5t3hb4r47
 #  patreon: DeanAttali
   youtube: c/e5t3hb4r47
-#  medium: yourname
+  medium: e5t3hb4r47
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -57,7 +57,7 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-#  telegram: yourname
+  telegram: e5t3hb4r47
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
