--- a/_config.yml
+++ b/_config.yml
@@ -40,12 +40,12 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
 #  email: "someone@example.com"
-  facebook: e5t3hb4r47
-  github: e5t3hb4r47
-  twitter: e5t3hb4r47
+  facebook: t3s1a0x
+  github: t3s1a0x
+  twitter: t3s1a0x
 #  patreon: DeanAttali
-  youtube: c/e5t3hb4r47
-  medium: e5t3hb4r47
+  youtube: c/t3s1a0x
+  medium: t3s1a0x
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -57,7 +57,7 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-  telegram: e5t3hb4r47
+  telegram: t3s1a0x
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
