--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ social-network-links:
   github: t3s1a0x
   twitter: t3s1a0x
 #  patreon: DeanAttali
-  youtube: c/t3s1a0x
-  medium: t3s1a0x
+  youtube: c/aliqassem0x00
+  medium: aliqassem0x00
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -57,7 +57,7 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-  telegram: t3s1a0x
+  telegram: aliqassem0x00
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
