--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
 #  email: "someone@example.com"
-  facebook: t3s1a0x
-  github: t3s1a0x
-  twitter: t3s1a0x
+  facebook: aliqassem0x00
+  github: aliqassem0x00
+  twitter: aliqassem0x00
 #  patreon: DeanAttali
   youtube: c/aliqassem0x00
   medium: aliqassem0x00
