--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
 #  email: "someone@example.com"
-#  facebook: aliqassem0x00
+  facebook: aliqassem0x00
 #  github: aliqassem0x00
 #  twitter: aliqassem0x00
 #  patreon: DeanAttali
